--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,16 +27,19 @@ android {
     }
 }
 
+
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'androidx.appcompat:appcompat:1.5.0'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation("com.squareup.okhttp3:okhttp:4.9.0")
+    implementation("com.squareup.okhttp3:okhttp:4.9.1")
     testImplementation("com.squareup.okhttp3:mockwebserver:4.9.0")
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
+    implementation ('com.github.franmontiel:PersistentCookieJar:v1.0.1')
+    implementation('javax.servlet:servlet-api:2.5')
 }
