App board_userbtn_comment func

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,8 @@
         <activity
             android:name=".ViewStudy"
             android:exported="false" />
+        <activity android:name=".Only_ViewStudy"
+            android:exported="false"/>
         <activity
             android:name=".PlusStudy"
             android:exported="false" />
