--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
     implementation ('com.github.franmontiel:PersistentCookieJar:v1.0.1')
     implementation('javax.servlet:servlet-api:2.5')
+    implementation fileTree(include: ['*.jar'],dir:'libs')
+    implementation files('libs/libDaumMapAndroid.jar')
 }
